@@ -1,3 +1,7 @@
+2011-09-12  Andreas Schwab  <schwab@redhat.com>
+
+	* elf/rtld.c: Remove use of USE___THREAD.
+
 2011-09-11  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* elf/Makefile (gen-ldd): Prepend $(..) to $(ldd-rewrite-script)
